fix(product-size-popover): trigger not working on iphone

--- a/resources/scss/blocks/complect-item.scss
+++ b/resources/scss/blocks/complect-item.scss
@@ -91,3 +91,9 @@
     }
   }
 }
+
+@include media-breakpoint-between(xs,sm){
+  .complect-item__image {
+    min-height: 320px;
+  }
+}
